--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Carter+One&family=Fredoka+One&family=Maven+Pro:wght@400;500&family=Mulish:wght@500;800&display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Carter+One&family=Fredoka+One&family=Maven+Pro:wght@400;500&family=Mulish:wght@500;800&display=swap">
     <title>Registration Form</title>
 </head>
-<body>  
+
+<body>
     <div class="container">
         <div class="icon" style="width: 45%;display: flex;">
             <img src="WhatsApp Image 2022-01-27 at 14.41.06 (1).jpeg">
         </div>
-        <div class="form" style="display: flex;flex-direction: column;">
+        <div class="form">
             <h1>Registration Form</h1>
             <form>
                 <div class="input-form">
@@ -26,8 +29,8 @@
                             <input type="text" id="fname" name="fname" placeholder="Masukkan Nama Lengkap">
                         </div>
                     </div>
-                    <label for="email">No KTP</label>
-                    <input type="email" id="email" name="email" placeholder="Masukkan Nomor KTP">
+                    <label for="KTP">No KTP</label>
+                    <input type="number" id="KTP" name="KTP" placeholder="Masukkan Nomor KTP">
                 </div>
                 <div class="button button">
                     <button id="submit-button" type="submit">REGISTER NOW</button>
@@ -36,8 +39,7 @@
         </div>
     </div>
 
-    <script>
-        
-    </script>
+    <script src="index.js"></script>
 </body>
+
 </html>
