--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.gstatic.com">
+
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Carter+One&family=Fredoka+One&family=Maven+Pro:wght@400;500&family=Mulish:wght@500;800&display=swap">
-    <title>Registration Form</title>
+    <title>Landing Page| Registration</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
             <img src="WhatsApp Image 2022-01-27 at 14.41.06 (1).jpeg">
         </div>
         <div class="form">
-            <h1>Registration Form</h1>
+            <h1>DAFTAR VAKSIN KELURAHAN PASAR REBO</h1>
             <form>
                 <div class="input-form">
                     <div class="full-name">
@@ -29,17 +29,16 @@
                             <input type="text" id="fname" name="fname" placeholder="Masukkan Nama Lengkap">
                         </div>
                     </div>
-                    <label for="KTP">No KTP</label>
-                    <input type="number" id="KTP" name="KTP" placeholder="Masukkan Nomor KTP">
+                    <label for="tanggalLahir">TANGGAL LAHIR</label>
+                    <input type="date" id="tanggalLahir" name="tanggalLahir">
                 </div>
                 <div class="button button">
-                    <button id="submit-button" type="submit">REGISTER NOW</button>
+                    <button id="submit-button">REGISTER NOW!</button>
                 </div>
             </form>
         </div>
     </div>
-
-    <script src="index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
