--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
 </head>
 
 <body>
+    <div class="popup-container" id="popupContainer">
+        <div class="popup-box">
+            <h2>Selamat Andrizal Chaidar kamu berhasil mendaftar untuk antrian vaksin</h2>
+            <h4>Lokasi untuk vaksinasi kamu berada di SDN 05 KALISARI, Kec. Pasar Rebo, Kel. Kalisari pada tanggal 5 februari 2022</h4>
+            <h1 class="countdown">COUNTDOWN</h1>
+            <div class="button">
+                <button id="popUpBtn">close</button>
+            </div>
+
+        </div>
+    </div>
     <div class="container">
-        <div class="icon" style="width: 45%;display: flex;">
-            <img src="WhatsApp Image 2022-01-27 at 14.41.06 (1).jpeg">
+        <div class="icon">
+            <img id = "iconMain" src="/img/WhatsApp Image 2022-01-27 at 14.41.06 (1).jpeg" style="cursor: pointer;">
         </div>
         <div class="form">
             <h1>DAFTAR VAKSIN KELURAHAN PASAR REBO</h1>
