--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style2.css">
-    <link rel="stylesheet" href="https://fonts.gstatic.com">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Carter+One&family=Fredoka+One&family=Maven+Pro:wght@400;500&family=Mulish:wght@500;800&display=swap">
     <title>Registration Form</title>
@@ -63,7 +62,8 @@
                     <li><a class="dropdown-item" href="#">Kampung Baru</a>
                         <ul class="submenu5">
                             <li><a class="dropdown-item" id="SMAN_08" href="#">SMAN 38 Kampung Baru</a></li>
-                            <li><a class="dropdown-item" id="Puskesmas_Kelurahan" href="#">Puskesmas Kelurahan Baru</a></li>
+                            <li><a class="dropdown-item" id="Puskesmas_Kelurahan" href="#">Puskesmas Kelurahan Baru</a>
+                            </li>
                             <li><a class="dropdown-item" id="SMAN_88" href="#">SMAN 88</a></li>
                         </ul>
                     </li>
@@ -79,14 +79,16 @@
             </div>
             <div class="nama_Alamat">
                 <ul id="nama_jalan">
+                    <li>SEKOLAHAN</li>
                 </ul>
             </div>
         </div>
     </div>
-    
+
     <script src="index2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
