--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
                 </button>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">Kalisari</a>
-                        <ul class="submenu2">
+                        <ul class="submenu2" id="xsari">
                             <li><a class="dropdown-item" id="SDN_05" href="#">SDN 05 Kalisari</a></li>
                             <li><a class="dropdown-item" id="GOR_Kalisari" href="#">GOR Kalisari</a></li>
                             <li><a class="dropdown-item" id="GOR_Ciracas" href="#">GOR Ciracas</a></li>
@@ -43,7 +43,7 @@
                         </ul>
                     </li>
                     <li><a class="dropdown-item" href="#">Pekayon</a>
-                        <ul class="submenu3">
+                        <ul class="submenu3" id="pkyn">
                             <li><a class="dropdown-item" id="SMP_184" href="#">SMPN 184 Pekayon</a></li>
                             <li><a class="dropdown-item" id="Puskesmas_Pekayon" href="#">Puskesmas Pekayon</a></li>
                             <li><a class="dropdown-item" id="SMAN_106" href="#">SMAN 106 Jakarta</a></li>
@@ -51,7 +51,7 @@
                         </ul>
                     </li>
                     <li><a class="dropdown-item" href="#">Cijantung</a>
-                        <ul class="submenu4">
+                        <ul class="submenu4" id="cjtng">
                             <li><a class="dropdown-item" id="RS_Kesdam" href="#">RS Kesdam Jaya Cijantung</a></li>
                             <li><a class="dropdown-item" id="SMPN_251" href="#">SMP Negri 251</a></li>
                             <li><a class="dropdown-item" id="Bayu_Yudha" href="#">Bayu Yudha Arena</a></li>
@@ -60,7 +60,7 @@
                         </ul>
                     </li>
                     <li><a class="dropdown-item" href="#">Kampung Baru</a>
-                        <ul class="submenu5">
+                        <ul class="submenu5" id="kpgbr">
                             <li><a class="dropdown-item" id="SMAN_08" href="#">SMAN 38 Kampung Baru</a></li>
                             <li><a class="dropdown-item" id="Puskesmas_Kelurahan" href="#">Puskesmas Kelurahan Baru</a>
                             </li>
@@ -68,7 +68,7 @@
                         </ul>
                     </li>
                     <li><a class="dropdown-item" href="#">Gedong</a>
-                        <ul class="submenu6">
+                        <ul class="submenu6" id="gdg">
                             <li><a class="dropdown-item" id="SDN_Gedong" href="#">SDN Gedong 12</a></li>
                             <li><a class="dropdown-item" id="RS_Pasar" href="#">RS Pasar Rebo</a></li>
                             <li><a class="dropdown-item" id="KPAD_Cijantung" href="#">KPAD Cijantung</a></li>
@@ -77,10 +77,8 @@
                     </li>
                 </ul>
             </div>
-            <div class="nama_Alamat">
-                <ul id="nama_jalan">
-                    <li>SEKOLAHAN</li>
-                </ul>
+            <div>
+                <p id="namaJalan"></p>
             </div>
         </div>
     </div>
