--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     <input required type="date" id="tanggalLahir" name="tanggalLahir" required>
                     <div class="failed-form" id="dateFailed">Tanggal lahir tidak boleh kosong</div>
                 </div>
-                <div class="button button">
-                    <button id="submit-button" type="submit">DAFTAR SEKARANG</button>
+                <div class="button">
+                    <button id="submit-button" type="submit">CONTINUE</button>
                 </div>
             </form>
         </div>
