--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
             <img src="WhatsApp Image 2022-01-27 at 14.41.06 (1).jpeg">
         </div>
         <div class="form" style="display: flex;flex-direction: column;">
-            <h1>Registration Form</h1>
+            <h1>Pilih Lokasi Vaksinasi Anda</h1>
             <!-- Example split danger button -->
             <div class="btn-group">
                 <button type="button" class="btn">Kecamatan</button>
@@ -33,7 +33,7 @@
                     <span class="visually-hidden">Toggle Dropdown</span>
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Kalisari</a>
+                    <li><a class="dropdown-item kel" href="#">Kalisari</a>
                         <ul class="submenu2" id="xsari">
                             <li><a class="dropdown-item" id="SDN_05" href="#">SDN 05 Kalisari</a></li>
                             <li><a class="dropdown-item" id="GOR_Kalisari" href="#">GOR Kalisari</a></li>
@@ -42,7 +42,7 @@
                             <li><a class="dropdown-item" id="SMP_179" href="#">SMPN 179 Kalisari</a></li>
                         </ul>
                     </li>
-                    <li><a class="dropdown-item" href="#">Pekayon</a>
+                    <li><a class="dropdown-item kel" href="#">Pekayon</a>
                         <ul class="submenu3" id="pkyn">
                             <li><a class="dropdown-item" id="SMP_184" href="#">SMPN 184 Pekayon</a></li>
                             <li><a class="dropdown-item" id="Puskesmas_Pekayon" href="#">Puskesmas Pekayon</a></li>
@@ -50,7 +50,7 @@
                             <li><a class="dropdown-item" id="SDN_Pekayon" href="#">SDN Pekayon 09 Pagi</a></li>
                         </ul>
                     </li>
-                    <li><a class="dropdown-item" href="#">Cijantung</a>
+                    <li><a class="dropdown-item kel" href="#">Cijantung</a>
                         <ul class="submenu4" id="cjtng">
                             <li><a class="dropdown-item" id="RS_Kesdam" href="#">RS Kesdam Jaya Cijantung</a></li>
                             <li><a class="dropdown-item" id="SMPN_251" href="#">SMP Negri 251</a></li>
@@ -59,7 +59,7 @@
                             <li><a class="dropdown-item" id="STKIP_Kusumanegara" href="#">STKIP Kusumanegara</a></li>
                         </ul>
                     </li>
-                    <li><a class="dropdown-item" href="#">Kampung Baru</a>
+                    <li><a class="dropdown-item kel" href="#">Kampung Baru</a>
                         <ul class="submenu5" id="kpgbr">
                             <li><a class="dropdown-item" id="SMAN_08" href="#">SMAN 38 Kampung Baru</a></li>
                             <li><a class="dropdown-item" id="Puskesmas_Kelurahan" href="#">Puskesmas Kelurahan Baru</a>
@@ -67,7 +67,7 @@
                             <li><a class="dropdown-item" id="SMAN_88" href="#">SMAN 88</a></li>
                         </ul>
                     </li>
-                    <li><a class="dropdown-item" href="#">Gedong</a>
+                    <li><a class="dropdown-item kel" href="#">Gedong</a>
                         <ul class="submenu6" id="gdg">
                             <li><a class="dropdown-item" id="SDN_Gedong" href="#">SDN Gedong 12</a></li>
                             <li><a class="dropdown-item" id="RS_Pasar" href="#">RS Pasar Rebo</a></li>
@@ -79,6 +79,9 @@
             </div>
             <div>
                 <p id="namaJalan"></p>
+            </div>
+            <div class="button">
+                <button id="submit-button" type="submit">Register Now!</button>
             </div>
         </div>
     </div>
