--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="popup-box">
             <h2>Selamat
                 <span class="input-popup" id="namePopUp">Andrizal Chaidar</span>
-                kamu berhasil mendaftar untuk antrian vaksin
+                kamu sudah terdaftar untuk vaksin
             </h2>
             <h4>Lokasi untuk vaksinasi kamu berada di
                 <span class="input-popup" id="lokasiPopUp">SDN 05 KALISARI, Kec. Pasar Rebo, Kel. Kalisari</span>
@@ -49,7 +49,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="icon" style="width: 45%; height: 10%; display: flex;">
+        <div class="icon" style="width: 45%; display: flex;">
             <img src="WhatsApp Image 2022-01-27 at 14.41.06 (1).jpeg">
         </div>
         <div class="form">
