--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="style2.css">
+    <link type="text/css" rel="stylesheet" href="style2.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Carter+One&family=Fredoka+One&family=Maven+Pro:wght@400;500&family=Mulish:wght@500;800&display=swap">
     <title>Registration Form</title>
@@ -55,9 +55,9 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="icon" style="width: 45%;display: flex;">
-            <img src="WhatsApp Image 2022-01-27 at 14.41.06 (1).jpeg">
+    <div class="containerP2">
+        <div class="icon" style="width: 45%; height: 10%; display: flex;">
+            <img src="WhatsApp Image 2022-01-27 at 14.41.06 (1).jpeg" >
         </div>
         <div class="form" style="display: flex;flex-direction: column;">
             <h1>Pilih Lokasi Vaksinasi Anda</h1>
@@ -115,7 +115,8 @@
             </div>
             <div>
                 <div class="failed-form">Silahkan memilih tempat terlebih dahulu</div>
-                <p id="namaJalan"></p>
+                <span class="nama-jalan-title">Lokasi Tempat Vaksin Anda:</span>
+                <p class="nama-jalan" id="namaJalan"></p>
             </div>
             <div class="button">
                 <button id="submit-button" type="submit">Register Now!</button>
