--- a/index2.html
+++ b/index2.html
@@ -57,10 +57,10 @@
     </div>
     <div class="containerP2">
         <div class="icon" style="width: 45%; height: 10%; display: flex;">
-            <img src="WhatsApp Image 2022-01-27 at 14.41.06 (1).jpeg" >
+            <img src="WhatsApp Image 2022-01-27 at 14.41.06 (1).jpeg">
         </div>
         <div class="form" style="display: flex;flex-direction: column;">
-            <h1>Pilih Lokasi Vaksinasi Anda</h1>
+            <h1 style="margin-top: 10px;">Pilih Lokasi Vaksinasi Anda</h1>
             <!-- Example split danger button -->
             <div class="btn-group">
                 <button type="button" class="btn">Kecamatan</button>
