--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="icon" style="width: 45%; display: flex;">
+        <div class="icon" style="width: 45%;">
             <img src="WhatsApp Image 2022-01-27 at 14.41.06 (1).jpeg">
         </div>
         <div class="form">
